[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUIs/SoundMenu.gd" type="Script" id=2]
[ext_resource path="res://GUIs/MainTheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SoundMenu" type="Popup" groups=[
"SoundMenu",
]]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -90.0
margin_right = 180.0
margin_bottom = 210.0
rect_min_size = Vector2( 60, 0 )
rect_pivot_offset = Vector2( -379.758, -17.5969 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioTitle" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
text = "Audio Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -85.0
margin_right = 170.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolLabel" type="Label" parent="VBoxContainer"]
margin_right = 340.0
margin_bottom = 35.0
text = "Master Volume"
align = 1

[node name="MasterVolSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 340.0
margin_bottom = 55.0
min_value = -50.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolLabel" type="Label" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 340.0
margin_bottom = 94.0
text = "SFX Volume"
align = 1

[node name="SFXVolSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 340.0
margin_bottom = 114.0
min_value = -50.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolLabel" type="Label" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 340.0
margin_bottom = 153.0
text = "Music Volume"
align = 1

[node name="MusicVolSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 157.0
margin_right = 340.0
margin_bottom = 173.0
min_value = -50.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 340.0
margin_bottom = 220.0

[node name="DoneButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 116.0
margin_right = 224.0
margin_bottom = 43.0
text = "Done"

[connection signal="value_changed" from="VBoxContainer/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
